--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
+    "nanoid": "^5.0.3",
     "nodemon": "^3.0.1",
     "redis": "^4.6.11",
     "shortid": "^2.2.16",
