logger code done

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redis": "^4.6.11",
     "shortid": "^2.2.16",
     "url-validation": "^2.1.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "winston": "^3.11.0"
   }
 }
