--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "url_shortner_project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"npx nodemon index.js",
+    "test": "jest --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "mongoose": "^8.0.1",
     "nanoid": "^5.0.3",
     "nodemon": "^3.0.1",
